# airflow-github-archive

./: .gitignore  README.md  compose.yml  pyproject.toml  requirements.txt
dags/: __init__.py  gh_archive_hourly_dag.py
src/gh_archive/: __init__.py
src/gh_archive/jobs/: __init__.py  fetch.py  stats.py  transform.py
src/gh_archive/utils/: __init__.py  io.py  paths.py
tests/: README.md  test_fetch.py  test_stats.py  test_transform.py
